--- a/system2/src/LecStudentMarks.form
+++ b/system2/src/LecStudentMarks.form
@@ -109,6 +109,15 @@
               </component>
             </children>
           </scrollpane>
+          <component id="4e8f2" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+              <text value="Logout"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
