--- a/system2/src/LecStudentDetails.form
+++ b/system2/src/LecStudentDetails.form
@@ -86,6 +86,15 @@
               </component>
             </children>
           </scrollpane>
+          <component id="5c50d" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+              <text value="Logout"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
