--- a/system2/src/AdminAUD.form
+++ b/system2/src/AdminAUD.form
@@ -34,7 +34,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <icon value="image/useraddlargeicon.png"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="d29cb" class="javax.swing.JButton" binding="UPDATEButton" default-binding="true">
@@ -61,18 +62,19 @@
           </component>
           <component id="3f6f7" class="javax.swing.JButton" binding="backButton" default-binding="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13922170"/>
               <font name="Arial Black" size="16" style="1"/>
               <foreground color="-131073"/>
+              <horizontalAlignment value="0"/>
               <text value="Back"/>
             </properties>
           </component>
           <component id="d04ef" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
             <constraints>
-              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13922170"/>
@@ -86,7 +88,8 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <icon value="image/userdeletelargeicon.png"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="14971" class="javax.swing.JLabel">
@@ -94,7 +97,8 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <icon value="image/userupdatelargeicon.png"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
