--- a/system2/src/Student_Course_Details.form
+++ b/system2/src/Student_Course_Details.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Course_Details">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Student_Course_Details">
   <grid id="27dc6" binding="panal1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -60,6 +60,18 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
+              <component id="7336e" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+                <constraints>
+                  <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
+                  <horizontalAlignment value="0"/>
+                  <text value="Logout"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <component id="308e0" class="javax.swing.JLabel">
