--- a/system2/src/Student_Course.form
+++ b/system2/src/Student_Course.form
@@ -30,7 +30,7 @@
               <text value="Attendence"/>
             </properties>
           </component>
-          <component id="ed03c" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+          <component id="ed03c" class="javax.swing.JButton" binding="backButton" default-binding="true">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -39,7 +39,7 @@
               <font name="Arial Black" size="14" style="1"/>
               <foreground color="-131073"/>
               <horizontalAlignment value="2"/>
-              <text value="Logout"/>
+              <text value="Back"/>
             </properties>
           </component>
           <component id="6e928" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
