--- a/system2/src/LecStudentdashbord.form
+++ b/system2/src/LecStudentdashbord.form
@@ -171,7 +171,7 @@
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
-                  <text value="back"/>
+                  <text value="Back"/>
                 </properties>
               </component>
               <component id="669a4" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
@@ -179,6 +179,7 @@
                   <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13922170"/>
                   <text value="Logout"/>
                 </properties>
               </component>
