--- a/system2/src/Lecturdashbord.form
+++ b/system2/src/Lecturdashbord.form
@@ -39,7 +39,7 @@
               </component>
               <component id="f87a1" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
@@ -66,17 +66,6 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="3d2fc" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <foreground color="-13922170"/>
-                </properties>
-              </component>
               <component id="9d57a" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -87,6 +76,14 @@
                   <font name="Arial Black" size="14" style="1"/>
                   <foreground color="-66049"/>
                   <text value="Edit Profile"/>
+                </properties>
+              </component>
+              <component id="9812c" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
