--- a/system2/src/LecStudentdashbord.form
+++ b/system2/src/LecStudentdashbord.form
@@ -24,6 +24,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14" style="1"/>
               <text value="Details"/>
             </properties>
           </component>
@@ -33,6 +34,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14" style="1"/>
               <text value="Eligibility"/>
             </properties>
           </component>
@@ -42,6 +44,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14" style="1"/>
               <text value="Grade"/>
             </properties>
           </component>
@@ -70,6 +73,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14" style="1"/>
               <text value="Mark"/>
             </properties>
           </component>
@@ -126,6 +130,7 @@
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
+                  <font size="14" style="1"/>
                   <text value="GPA"/>
                 </properties>
               </component>
@@ -144,6 +149,7 @@
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
+                  <font size="14" style="1"/>
                   <text value="Attendance"/>
                 </properties>
               </component>
@@ -162,6 +168,7 @@
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
+                  <font size="14" style="1"/>
                   <text value="Medical"/>
                 </properties>
               </component>
